--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 	<head>
 		<script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
-		<link rel="import" href="proto-element.html">
+		<link rel="import" href="my-element.html">
 	</head>
 	<body>
-		<my-element></my-element>
 	</body>
 </html>
