--- a/my-element.html
+++ b/my-element.html
@@ -5,27 +5,34 @@
 	'use strict';
 
 	// register a new element
-	Polymer({
+	var MyElement = Polymer({
 		is: 'my-element',
-		ready: function() {
+		
+		factoryImpl: function (foo, bar) {
+			this.foo = foo;
+			this.log(bar);
+		},
+		
+		log: function (bar) {
+			console.log(bar);
+		},
+
+		ready: function () {
 			this.textContent = 'myFirstElement';
 		}
 	});
-	
-	// other way
-	let MyOtherElement = Polymer({
-		is: 'my-other-element',
-		created: function() {
-			console.log('I am created!');
-		},
-		ready: function() {
-			this.textContent = 'mySecondElement';
-		}
-	});
-	
-	let $body = document.querySelector('body');
-	let el = document.createElement('my-other-element'); // or el = new MyOtherElement();
 
-	$body.appendChild(el);
+	var element = new MyElement(42, 'octopus');
+	document.querySelector('body').appendChild(element);
+	
+/*
+	The factoryImpl method is only invoked when you create an element
+	using the constructor. The factoryImpl method is not called if the
+	element is created from markup by the HTML parser, or if the element
+	is created using document.createElement.
 
+	The factoryImpl method is called after the element is initialized
+	(local DOM created, default values set, and so on). See Ready callback
+	and element initialization for more information.
+*/
 </script>
