extending native elements

--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 		<link rel="import" href="my-element.html">
 	</head>
 	<body>
+		<!-- insert a `my-input` which extends the native element -->
+		<input is="my-input" placeholder="in da html" style="background:pink">
 	</body>
 </html>
