--- a/my-element.html
+++ b/my-element.html
@@ -5,34 +5,17 @@
 	'use strict';
 
 	// register a new element
-	var MyElement = Polymer({
-		is: 'my-element',
-		
-		factoryImpl: function (foo, bar) {
-			this.foo = foo;
-			this.log(bar);
-		},
-		
-		log: function (bar) {
-			console.log(bar);
-		},
-
-		ready: function () {
-			this.textContent = 'myFirstElement';
+	var MyInput = Polymer({
+		is: 'my-input',
+		extends: 'input',
+		created: function () {
+			this.style.border = '2px solid green';
+			this.setAttribute('placeholder', 'in da script'); //overwrite the attribute placeholder
 		}
 	});
 
-	var element = new MyElement(42, 'octopus');
-	document.querySelector('body').appendChild(element);
-	
-/*
-	The factoryImpl method is only invoked when you create an element
-	using the constructor. The factoryImpl method is not called if the
-	element is created from markup by the HTML parser, or if the element
-	is created using document.createElement.
-
-	The factoryImpl method is called after the element is initialized
-	(local DOM created, default values set, and so on). See Ready callback
-	and element initialization for more information.
-*/
+	// inserting a second input, this time in the script
+	var myInput = new MyInput();
+	document.querySelector('body').appendChild(myInput);
+	console.log(myInput instanceof HTMLInputElement); // true
 </script>
