--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 	<head>
 		<script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
 		<link rel="import" href="my-element.html">
+		<style>
+			body {
+				padding: 10px;
+			}
+		</style>
 	</head>
 	<body>
+		<my-element color="red"></my-element>
+		<my-element color="green"></my-element>
+		<my-element border-size="3"></my-element>
+		<my-element hide></my-element>
 	</body>
 </html>
