--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 		</style>
 	</head>
 	<body>
-		<my-element color="red"></my-element>
-		<my-element color="green"></my-element>
-		<my-element border-size="3"></my-element>
-		<my-element hide></my-element>
+		<button is="my-button">Click me!</input>
 	</body>
 </html>
